5.apr (ws)
      - fix #5195: Copy paste disables playback
      - fix #5205: bad matching in "Notehead" in note properties
4.apr (ws)
      - Modified portaudio exit code. Maybe this fixes problems when exiting
        mscore.
      - fix #5189: Corrupted custom beam depending on the platform. The fix
        involves a change in the *.msc[xz] format. Version number increased
        to 1.14.
3.apr (la)
      - add enum for arpeggio types
      - add support for up to down arpeggio (patch from Aaron Epstein)
      - fix #5154 midi input works only on channel 1 (patch by Jason Essington)
2.apr (ws)
      - fix #5177: memory corruption when creating more than four staves/part
      (tb)
      - adding Bulgarian language
1.apr (ws)
      - implemented #4149: Left align lyrics for melismas and tied notes
      - fix #4680: QString conversion of MIDI meta message text needs fixing:
        forgot to copy trailing zero in meta data in Event(const Event&)
      - fix #5155: High CPU Usage When Showing the beginning of a score
        (navigator problem)
31.mar (ws)
      - fix #5152: Crash Opening Full Orchestra MusicXML
      - fix #5065: Arpeggio collides with accidental
      - fix #5096-2: Grace notes not erased on paste
      - fix #5112: Undo after CNTRL drag group of selected lyrics not working
      - fix #5133: Font resize not immediate
      - fix #4701: Unable to edit instrument name
30.mar (ws)
      - fix #5123: Infinite loop on first measure repeat
      (db)
      - add Greek handbook (most intra-document links don't work)
      - fix English handbook, and update the rest
      - update Brasilian Portuguese instrument list
29.mar (ws)
      - more transpose code debugging, fixing #5007, #5111, #5104, #5115
      (la)
      - fix shortcuts sorting in preferences
      - fix: shortcuts not saved & Enable changing default Qt shortcuts
28.mar (ws)
      - fix #5104: Transpose chordnames hang
      - cleanup of transpose implementation; more testing is needed;