@@ -47,7 +47,7 @@ add_custom_command(
    OUTPUT ${PROJECT_BINARY_DIR}/all.h.pch
    COMMAND ${CMAKE_CXX_COMPILER}
      -g -Wextra -Wall
-     -I${QT_INCLUDE_DIR}
+     -I"${QT_INCLUDE_DIR}"
      -o all.h.pch all.h
    DEPENDS ${PROJECT_BINARY_DIR}/all.h
    WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
